unpackaged/main/default/objects/Opportunity/fields/Monthly_Fee_Difference__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fee_Difference__c</fullName>
    <formula>Monthly_Marketing_Fee_difference__c +  Monthly_Subscription_Fee_difference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Fee Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>