unpackaged/main/default/objects/Opportunity/fields/Monthly_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_Fee__c</fullName>
    <label>Monthly Subscription Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>