unpackaged/main/default/objects/Opportunity/fields/Monthly_Subscription_Fee_difference__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_Fee_difference__c</fullName>
    <formula>IF( Record_Type_Name__c = &quot;Reduce Service&quot;,( Monthly_Subscription_Fee__c*-1)
,Monthly_Subscription_Fee__c -  Current_Monthly_Subscription_Fee__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Subscription Fee difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>