unpackaged/main/default/objects/Opportunity/fields/Monthly_Subscription_Fee_HS_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_Fee_HS_Addendum__c</fullName>
    <label>Monthly Subscription Fee (HS Addendum)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>