unpackaged/main/default/objects/Opportunity/fields/Monthly_Subscription_for_roll_up__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_for_roll_up__c</fullName>
    <formula>Monthly_Subscription_Fee__c *  Add_or_Subtract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Subscription for roll up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>