unpackaged/main/default/objects/Opportunity/fields/Most_recent_MLS_transaction__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_MLS_transaction__c</fullName>
    <label>(MLS) Most recent MLS transaction</label>
    <type>Date</type>
</CustomField>