unpackaged/main/default/objects/Opportunity/fields/New_Addendum__c.field-meta.xml
<CustomField>
    <fullName>New_Addendum__c</fullName>
    <label>New Addendum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Churn/Expansion</fullName>
            </value>
            <value>
                <fullName>Change Plan</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>