unpackaged/main/default/objects/Opportunity/fields/New_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Date__c</fullName>
    <label>New Date</label>
    <type>DateTime</type>
</CustomField>