unpackaged/main/default/objects/Opportunity/fields/New_domain__c.field-meta.xml
<CustomField>
    <fullName>New_domain__c</fullName>
    <label>New domain</label>
    <type>Url</type>
</CustomField>