unpackaged/main/default/objects/Opportunity/fields/New_Sales_Close_Date_Addendum__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Close_Date_Addendum__c</fullName>
    <formula>Original_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Sales Close Date-Addendum</label>
    <type>Date</type>
</CustomField>