unpackaged/main/default/objects/Opportunity/fields/New_template__c.field-meta.xml
<CustomField>
    <fullName>New_template__c</fullName>
    <inlineHelpText>Select the Template Change</inlineHelpText>
    <label>New template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker (Property)</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Brand</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Global Luxury</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Global Luxury (Property)</fullName>
            </value>
            <value>
                <fullName>Compass Innovator</fullName>
            </value>
            <value>
                <fullName>Compass Milestone (Dev)</fullName>
            </value>
            <value>
                <fullName>Compass Navigator</fullName>
            </value>
            <value>
                <fullName>Compass Prestige</fullName>
            </value>
            <value>
                <fullName>Compass S&amp;E</fullName>
            </value>
            <value>
                <fullName>Corcoran Agent 1</fullName>
            </value>
            <value>
                <fullName>Corcoran Agent 2</fullName>
            </value>
            <value>
                <fullName>Corcoran Development</fullName>
            </value>
            <value>
                <fullName>Evolution</fullName>
            </value>
            <value>
                <fullName>Global Collective</fullName>
            </value>
            <value>
                <fullName>Home Valuation</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Masterpiece</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Redirect Only</fullName>
            </value>
            <value>
                <fullName>Sothebys 4 (Property)</fullName>
            </value>
            <value>
                <fullName>The Edge</fullName>
            </value>
            <value>
                <fullName>The Icon - SIR 3</fullName>
            </value>
            <value>
                <fullName>The Inspiration</fullName>
            </value>
            <value>
                <fullName>The producer</fullName>
            </value>
            <value>
                <fullName>The Trailblazer - SIR 2</fullName>
            </value>
            <value>
                <fullName>Universal</fullName>
            </value>
            <value>
                <fullName>Vanguard Properties</fullName>
            </value>
            <value>
                <fullName>VDB Custom</fullName>
            </value>
            <value>
                <fullName>The Visionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>