unpackaged/main/default/objects/Opportunity/fields/NOPct_of_txn_value_as_seller__c.field-meta.xml
<CustomField>
    <fullName>NOPct_of_txn_value_as_seller__c</fullName>
    <label>(MLS) Pct of txn value as seller</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>