unpackaged/main/default/objects/Opportunity/fields/Number_of_IDX_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_IDX_Product_Lines__c</fullName>
    <defaultValue>0</defaultValue>
    <description>managed in Opportunity - Line RollUp Manager flow</description>
    <inlineHelpText>Sum of Quantity of IDX Tool or IDX Tool AddOns product line items</inlineHelpText>
    <label>Number of IDX Product Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>