unpackaged/main/default/objects/Opportunity/fields/Number_of_MLS_Boards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_MLS_Boards__c</fullName>
    <label>Number of MLS Boards</label>
    <summaryForeignKey>Opportunity_MLS_Board__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>