unpackaged/main/default/objects/Opportunity/fields/Omit_from_CSM_churn_reporting__c.field-meta.xml
<CustomField>
    <fullName>Omit_from_CSM_churn_reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omit from CSM churn reporting</label>
    <type>Checkbox</type>
</CustomField>