unpackaged/main/default/objects/Opportunity/fields/On_Demand_Ads_Budget__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_Ads_Budget__c</fullName>
    <label>On-Demand Ads Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>