unpackaged/main/default/objects/Opportunity/fields/One_Time_Fee__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fee__c</fullName>
    <label>One-Time Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>