unpackaged/main/default/objects/Opportunity/fields/One_Time_Service__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Service</label>
    <type>Checkbox</type>
</CustomField>