unpackaged/main/default/objects/Opportunity/fields/One_time_Services_HS_Addendum__c.field-meta.xml
<CustomField>
    <fullName>One_time_Services_HS_Addendum__c</fullName>
    <label>One-time Services (HS Addendum))</label>
    <length>255</length>
    <type>Text</type>
</CustomField>