unpackaged/main/default/objects/Opportunity/fields/Opportunity_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity 18 Digit ID</label>
    <type>Text</type>
</CustomField>