unpackaged/main/default/objects/Opportunity/fields/Original_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>Original_UTM_Content__c</fullName>
    <label>Original UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>