unpackaged/main/default/objects/Opportunity/fields/Other_competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_competitor__c</fullName>
    <label>Other competitor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>