unpackaged/main/default/objects/Opportunity/fields/Other_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Other_Root_Cause__c</fullName>
    <label>Other Root Cause</label>
    <type>TextArea</type>
</CustomField>