unpackaged/main/default/objects/Opportunity/fields/Other_Source_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_3__c</fullName>
    <label>Other Source 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>