unpackaged/main/default/objects/Opportunity/fields/Override_Subscription_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Subscription_Renewal_Date__c</fullName>
    <label>Override Subscription Renewal Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No (Needs CSM Manager Approval)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>