unpackaged/main/default/objects/Opportunity/fields/Partnership_Organization__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Organization__c</fullName>
    <formula>TEXT(Account.Partnership_Organization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Organization</label>
    <type>Text</type>
</CustomField>