unpackaged/main/default/objects/Opportunity/fields/Payment_Term_Text__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Text__c</fullName>
    <label>Payment Term Text</label>
    <length>250</length>
    <type>Text</type>
</CustomField>