unpackaged/main/default/objects/Opportunity/fields/Plan_Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Plan_Ad_Spend__c</fullName>
    <label>Plan Ad Spend</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.AddOn_RollUp_Category__c</field>
        <operation>equals</operation>
        <value>Ad Spend</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Bundle_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>