unpackaged/main/default/objects/Opportunity/fields/Plan_Migration__c.field-meta.xml
<CustomField>
    <fullName>Plan_Migration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is to be marked for any legacy client moving to a new pricing plan.</inlineHelpText>
    <label>Plan Migration</label>
    <type>Checkbox</type>
</CustomField>