unpackaged/main/default/objects/Opportunity/fields/Post_Demo_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Demo_Notes__c</fullName>
    <label>Post Demo Notes</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>