unpackaged/main/default/objects/Opportunity/fields/Pre_demo_AI_brief__c.field-meta.xml
<CustomField>
    <fullName>Pre_demo_AI_brief__c</fullName>
    <label>Pre-demo AI brief</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>