unpackaged/main/default/objects/Opportunity/fields/Preferred_communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_communication__c</fullName>
    <label>Preferred communication?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>