unpackaged/main/default/objects/Opportunity/fields/Pricing_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Reviewed</label>
    <type>Checkbox</type>
</CustomField>