unpackaged/main/default/objects/Opportunity/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM Integration</fullName>
            </value>
            <value>
                <fullName>Cost is too High</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>In a contract</fullName>
            </value>
            <value>
                <fullName>Scaling back</fullName>
            </value>
            <value>
                <fullName>Time of year</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Overall</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>IDX feed</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>Online Reviews</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
            <value>
                <fullName>Home Values</fullName>
            </value>
            <value>
                <fullName>Transaction Volume</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Quantity of Leads</fullName>
            </value>
            <value>
                <fullName>Quality of Leads</fullName>
            </value>
            <value>
                <fullName>Search Engine Ranking</fullName>
            </value>
            <value>
                <fullName>Website Traffic</fullName>
            </value>
            <value>
                <fullName>Website Customization Limitations</fullName>
            </value>
            <value>
                <fullName>MLS Feed Functionality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>