unpackaged/main/default/objects/Opportunity/fields/Prior_12_months_total_transaction_value__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_total_transaction_value__c</fullName>
    <formula>MLS_Prior_12_months_sold_transaction__c	+ MLS_Prior_12_months_buyer_transaction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(MLS) Prior 12 m total transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>