unpackaged/main/default/objects/Opportunity/fields/Push_In_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Push_In_Closed_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Push In Closed Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>