unpackaged/main/default/objects/Opportunity/fields/Qualifying_date__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_date__c</fullName>
    <label>Qualifying date</label>
    <type>DateTime</type>
</CustomField>