unpackaged/main/default/objects/Opportunity/fields/Reactivation__c.field-meta.xml
<CustomField>
    <fullName>Reactivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactivation</label>
    <type>Checkbox</type>
</CustomField>