unpackaged/main/default/objects/Opportunity/fields/Reason_for_Design_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Design_Refresh__c</fullName>
    <label>Reason for Design Refresh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change between 2 brokerage templates</fullName>
            </value>
            <value>
                <fullName>Change between brokerage template to a LP Design</fullName>
            </value>
            <value>
                <fullName>Change between 2 LP templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>