unpackaged/main/default/objects/Opportunity/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <label>Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>