unpackaged/main/default/objects/Opportunity/fields/Refund_reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_reason__c</fullName>
    <label>Refund reason</label>
    <type>TextArea</type>
</CustomField>