unpackaged/main/default/objects/Opportunity/fields/Related_Ticket_links__c.field-meta.xml
<CustomField>
    <fullName>Related_Ticket_links__c</fullName>
    <label>Related Ticket links</label>
    <type>TextArea</type>
</CustomField>