unpackaged/main/default/objects/Opportunity/fields/Remove_Plan__c.field-meta.xml
<CustomField>
    <fullName>Remove_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check this box if the client is canceling one website/subscription but keeping one or more subscriptions.</inlineHelpText>
    <label>Remove Plan</label>
    <type>Checkbox</type>
</CustomField>