unpackaged/main/default/objects/Opportunity/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox should only be used for renewal addendums. Please confirm with the SF team the opportunity is correct prior to marking closed/won</inlineHelpText>
    <label>Renewal</label>
    <type>Checkbox</type>
</CustomField>