unpackaged/main/default/objects/Opportunity/fields/Requires_SEO_Migration__c.field-meta.xml
<CustomField>
    <fullName>Requires_SEO_Migration__c</fullName>
    <label>Requires SEO Migration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>