unpackaged/main/default/objects/Opportunity/fields/Reschedules__c.field-meta.xml
<CustomField>
    <fullName>Reschedules__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reschedules</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>