unpackaged/main/default/objects/Opportunity/fields/Retention_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Retention_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retention Addendum</label>
    <type>Checkbox</type>
</CustomField>