unpackaged/main/default/objects/Opportunity/fields/Revisions_Text__c.field-meta.xml
<CustomField>
    <fullName>Revisions_Text__c</fullName>
    <label>Revisions Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>