unpackaged/main/default/objects/Opportunity/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Don&#39;t think it will work</fullName>
            </value>
            <value>
                <fullName>Partner/Spouse disagree</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Poorly Qualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service/Experience</fullName>
            </value>
            <value>
                <fullName>Structural Churn</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Plan Migration</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>