unpackaged/main/default/objects/Opportunity/fields/Sales_Debooking__c.field-meta.xml
<CustomField>
    <fullName>Sales_Debooking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Debooking</label>
    <type>Checkbox</type>
</CustomField>