unpackaged/main/default/objects/Opportunity/fields/Saved_Notes__c.field-meta.xml
<CustomField>
    <fullName>Saved_Notes__c</fullName>
    <label>Saved Notes</label>
    <type>TextArea</type>
</CustomField>