unpackaged/main/default/objects/Opportunity/fields/Saved_Tactics__c.field-meta.xml
<CustomField>
    <fullName>Saved_Tactics__c</fullName>
    <label>Saved Tactics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved (offered credit)</fullName>
            </value>
            <value>
                <fullName>Saved (downgraded)</fullName>
            </value>
            <value>
                <fullName>Saved (offered additional service)</fullName>
            </value>
            <value>
                <fullName>Saved (no additional offering)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>